--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital:wght@100;300;400;500;700&display=swap');
 
 * {
     margin: 0;
@@ -61,6 +61,7 @@ ul {
     margin: 0 auto;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    font-style: italic;
     font-size: 15px;
     color: #999999;
     font-weight: 400;
